--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css"
             ]
