--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.9",
+    "@angular/cdk": "^20.2.12",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
+    "@angular/material": "^20.2.12",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "ng-otp-input": "^2.0.9",
+    "ngx-material-intl-tel-input": "^20.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
